Fix alignment of Hero when it has inner blocks

--- a/private/src/styles/blocks/hero/_main.scss
+++ b/private/src/styles/blocks/hero/_main.scss
@@ -38,6 +38,7 @@
 
   @include mq(xx-small) {
     padding: 10px 20px;
+    max-width: 840px;
   }
 }
 
